roles: changes required by Debian 13 upgrade
- Add trixie-backports instead of bookworm-backports
- Update dovecot configuration to match latest config files
- Integrate postfix config changes from upgrade
- Update mumble-server config file location

--- a/roles/base/tasks/main.yml
+++ b/roles/base/tasks/main.yml
@@ -1,16 +1,16 @@
 ---
 # Name: Install and configure some base packages
 
-- name: Apt - enable bookworm-backports
+- name: Apt - enable trixie-backports
   deb822_repository:
-    name: bookworm-backports
+    name: trixie-backports
     types: deb
     uris: http://deb.debian.org/debian
-    suites: bookworm-backports
+    suites: trixie-backports
     components:
       - main
       - contrib
-      - non-free
+      - non-free-firmware
     signed_by: /usr/share/keyrings/debian-archive-keyring.gpg
 
 - name: Install essential utils
