roles/ugmm: enable the signup form, and expose /usr/share/javascript on /javascript

--- a/roles/ugmm/templates/ugmm.plug.org.au.conf
+++ b/roles/ugmm/templates/ugmm.plug.org.au.conf
@@ -14,7 +14,7 @@ map $uri $ugmm_script_name {
     /memberself            /memberself.php;
     /resendack             /resendack.php;
     /resetpassword         /resetpassword.php;
-    #/signup                /signup.php;
+    /signup                /signup.php;
 }
 
 server {
@@ -27,6 +27,10 @@ server {
     # Handle root path, i.e. http://ugmm.plug.org.au/
     location = / {
         return 302 /memberself;
+    }
+
+    location ^~ /javascript {
+        alias /usr/share/javascript;
     }
 
     # Forced prefix for old path
