--- a/roles/mailman2/templates/lists.plug.org.au.conf
+++ b/roles/mailman2/templates/lists.plug.org.au.conf
@@ -15,32 +15,27 @@ server {
 
 	index index.html index.htm index.nginx-debian.html;
 
-	server_name lists2.plug.org.au lists.plug.org.au;
+	server_name lists.plug.org.au;
 
 	location / {
 		# Redirect user to the proper mailman location
 		return 302 https://$host/mailman/listinfo;
 	}
 
-	location /media {
-		# Allow directory listing
-		autoindex on;
-	}
+	location /mailman {
+		# Mitigate mailbomber scripts hitting our subscribe endpoints
+		if ($request_uri ~ "/mailman/subscribe/") {
+			set $mailbomber "R";
+		}
+		if ($request_method = GET) {
+			set $mailbomber "${mailbomber}M";
+		}
+		if ($mailbomber = RM) {
+			return 403;
+		}
 
-        location /mailman {
                root /usr/lib/cgi-bin/;
                fastcgi_split_path_info (^/mailman/[^/]*)(.*)$;
-               include /etc/nginx/fastcgi_params;
-               fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-               fastcgi_param PATH_INFO $fastcgi_path_info;
-               fastcgi_param PATH_TRANSLATED $document_root$fastcgi_path_info;
-               fastcgi_intercept_errors on;
-               fastcgi_pass unix:/var/run/fcgiwrap.socket;
-        }
-
-        location /cgi-bin/mailman {
-               root /usr/lib/;
-               fastcgi_split_path_info (^/cgi-bin/mailman/[^/]*)(.*)$;
                include /etc/nginx/fastcgi_params;
                fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
                fastcgi_param PATH_INFO $fastcgi_path_info;
@@ -71,7 +66,7 @@ server {
 	listen 80;
 	listen [::]:80;
 
-	server_name lists2.plug.org.au lists.plug.org.au;
+	server_name lists.plug.org.au;
 
 	return 301 https://$host$request_uri;
 }
