roles/ugmm: update to 0.7.2

--- a/roles/ugmm/templates/ugmm.plug.org.au.conf
+++ b/roles/ugmm/templates/ugmm.plug.org.au.conf
@@ -1,22 +1,5 @@
 # {{ ansible_managed }}
 
-map $uri $ugmm_script_name {
-    default =404;
-    /ajax.php              /ajax.php;
-    /ctte-editmember       /ctte-editmember.php;
-    /ctte-members          /ctte-members.php;
-    /ctte-newmember        /ctte-newmember.php;
-    /logout                /logout.php;
-    /member-editdetails    /member-editdetails.php;
-    /member-editforwarding /member-editforwarding.php;
-    /member-editpassword   /member-editpassword.php;
-    /member-editshell      /member-editshell.php;
-    /memberself            /memberself.php;
-    /resendack             /resendack.php;
-    /resetpassword         /resetpassword.php;
-    /signup                /signup.php;
-}
-
 server {
     root /usr/share/plug-ugmm/www;
     server_name ugmm.plug.org.au;
@@ -29,23 +12,24 @@ server {
         return 302 /memberself;
     }
 
-    location ^~ /javascript {
+    location /javascript {
         alias /usr/share/javascript;
     }
 
     # Forced prefix for old path
-    location ^~ /ugmm/ {
-        rewrite .* /memberself permanent;
-    }
-
-    location ~ \.(css|gif|png|ico)$ {
+    location /ugmm {
+        return 302 /memberself;
     }
 
     location / {
-        try_files $ugmm_script_name =404;
-        include fastcgi.conf;
-        fastcgi_param SCRIPT_NAME $ugmm_script_name;
-        fastcgi_param SCRIPT_FILENAME $document_root$ugmm_script_name;
+        try_files $uri $uri.php$is_args$query_string;
+    }
+
+    location ~ \.php$ {
+        # Mitigate https://httpoxy.org/ vulnerabilities
+        fastcgi_param HTTP_PROXY "";
+
+        include snippets/fastcgi-php.conf;
         fastcgi_pass unix:/run/php/php-fpm.sock;
     }
 
