roles/plug-website: use aliases for media and video subfolders

--- a/roles/plug-website/templates/plug.org.au.conf
+++ b/roles/plug-website/templates/plug.org.au.conf
@@ -21,7 +21,7 @@ server {
 #	location ~ ^/ugmm/(.*) {
 #		return 302 http://ugmm.plug.org.au/$1$is_args$query_string;#
 #	}
-	location ~ ^/ugmm {
+	location /ugmm {
 		return 302 http://ugmm.plug.org.au/;
 	}
 
@@ -34,6 +34,13 @@ server {
 	location /media {
 		# Allow directory listing
 		autoindex on;
+                alias /srv/efs/sites/plug.org.au/media/;
+	}
+
+	location /video {
+		# Allow directory listing
+		autoindex on;
+                alias /srv/efs/sites/plug.org.au/media/video/;
 	}
 
     #listen [::]:443 ssl ipv6only=on; # managed by Certbot
