roles/postfix: try setting up a transport for rate limited outgoing mail
For now, only atmail (i.e. iiNet and friends) and yahoo destinations
will be rate limited to try and improve delivery.

--- a/roles/postfix/handlers/main.yml
+++ b/roles/postfix/handlers/main.yml
@@ -6,3 +6,6 @@
 
 - name: run postalias
   shell: "postalias /etc/aliases"
+
+- name: run postmap transport
+  shell: "postmap /etc/postfix/transport"
